# inception

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
claude-plugin/: README.md  package.json  server.ts
claude-plugin/.claude-plugin/: mcp.json  plugin.json
claude-plugin/.claude-plugin/hooks/: hooks.json
claude-plugin/commands/: attach.md  configure.md  detach.md  status.md
claude-plugin/hooks/: hooks.json
claude-plugin/mcp-server/: package-lock.json  package.json
claude-plugin/mcp-server/src/: server.ts
data/: inception.db
migrations/: 001_create_sessions.sql
openclaw-skill/: SKILL.md  inception.py
src/: lib.rs  main.rs
src/api/: mod.rs
src/config/: mod.rs
src/models/: mod.rs
src/session/: message_store.rs  mod.rs  store.rs
src/webhook/: mod.rs
src/websocket/: mod.rs
tests/: e2e_tests.rs  integration_tests.rs  websocket_tests.rs
tests/helpers/: mod.rs
